--- a/src/signup.html
+++ b/src/signup.html
@@ -1,10 +1,26 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>signup</title>
+  <meta charset="UTF-8">
+  <meta name="viewport"
+        content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>signup</title>
+  <style>
+    .sign-main {
+      background: #5f93e1;
+    }
+    .sign-main_content {
+      width: 85%;
+      height: 90%;
+      z-index: 1;
+      background: #FFFFFF;
+    }
+  </style>
 </head>
 <body>
-
+  <div class="sign-main">
+    <div class="sign-main_content"></div>
+  </div>
 </body>
 </html>
